# gentoo-core

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: arch.rs
src/: arch.rs  error.rs  interner.rs  lib.rs  variant.rs
